feat: game detail 관련 dto 추가